--- a/franske-course-information/modules/itc-2300/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2300/pages/schedule.adoc
@@ -1,27 +1,26 @@
-= ITC-2516 Official Course Schedule
+= ITC-2300 Official Course Schedule
 
 == Official Course Schedule
 [%autowidth,options="header"]
-|=================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
-| Date    | Week                            | Readings to do before the next date  | Work to do in class today                            | Work to do before the next date                                                                                                                | Assignments Due (Today by 2:00pm unless otherwise noted)                                                                                                                                                                             
-| 22-Aug  | 1                               | Modules 1 & 2                        | Course Introduction, Verify NetAcad Access           | Module 2 Packet Tracer Activities, Module 1 & 2 Online Discussion First Posts                                                                  |                                                                                                                                                                                                                                      
-| 29-Aug  | 2                               | Modules 3 & 4                        | Module 2 Lab Activities, Instructor Meeting          | Module 3 & 4 Packet Tracer Activities, Module 1 & 2 Online Discussion Response Posts, Module 3 & 4 Online Discussion First Posts               | Module 1 & 2 Online Discussion First Posts                                                                                                                                                                                           
-| 5-Sep   | 3 - NO CLASS MEETING LABOR DAY  | Modules 5, 6 & 7                     |                                                      | Module 3 & 4 Online Discussion Response Posts, Module 5, 6 & 7 Online Discussion First Posts                                                   | Module 2, 3 & 4 Packet Tracer Submissions, Module 2 Lab Reports, Module 1 & 2 All Discussion Posts, Module 3 & 4 First Discussion Posts, Module 1-3 Exam                                                                             
-| 12-Sep  | 4                               | Modules 8, 9 & 10                    | Module 3, 4, & 7 Lab Activities, Instructor Meeting  | Module 9 & 10 Packet Tracer Activities, Module 5-7 Discussion Response Posts, Module 8-10 Discussion First Posts                               | Module 3 & 4 All Discussion Posts, Module 5-7 First Discussion Posts, Module 4-7 Exam                                                                                                                                                
-| 19-Sep  | 5                               | Module 11                            | Module 9 & 10 Lab Activities, Instructor Meeting     | Module 11 Packet Tracer and Homework Activities, Module 8-10 Discussion Response Posts, Module 11 Discussion First Posts                       | Module 3, 4, & 7 Lab Reports, Module 9 & 10 Packet Tracer Submissions, Module 5-7 All Discussion Posts, Module 8-10 Discussion First Posts, Module 8-10 Exam                                                                         
-| 26-Sep  | 6                               | Module 12 & 13                       | Instructor Meeting                                   | Module 12 & 13 Packet Tracer and Homework Activities, Module 11 Discussion Response Posts, Module 12-13 Discussion First Posts                 | Module 9 & 10 Lab Repots, Module 11 Packet Tracer Submissions and Homework, Module 8-10 All Discussion Posts, Module 11 First Discussion Posts                                                                                       
-| 3-Oct   | 7                               | Module 14 & 15                       | Module 12 & 13 Lab Activities, Instructor Meeting    | Module 12 & 13 Discussion Response Posts, Module 14-15 Discussion First Posts                                                                  | Module 12 & 13 Packet Tracer Submissions and Homework, Module 11 All Discussion Posts, Module 12-13 Discussion First Posts, Module 11-13 Exam                                                                                        
-| 10-Oct  | 8                               | Module 16 & 17                       | Module 14 & 15 Lab Activities, Instructor Meeting    | Module 16 & 17 Packet Tracer Activities, Module 14 & 15 Discussion Response Posts, Module 16-17 Discussion First Posts                         | Module 12 & 13 Lab Reports, Module 12 & 13 All Discussion Posts, Module 14-15 Discussion First Posts, Module 14-15 Exam                                                                                                              
-| 17-Oct  | 9                               |                                      | Module 16 & 17 Lab Activities, Instructor Meeting    | Practice Final Exam, Practice Packet Tracer Skills Assessment, Cisco Course Feedback Form, Online Final Exam, Packet Tracer Skills Assessment  | Module 16 & 17 Packet Tracer Submissions, Module 14 & 15 Lab Reports ,Module 14-15 All Discussion Posts, Module 16 & 17 First Discussion Posts, Module 16-17 Exam                                                                    
-| 24-Oct  | 10                              | CCNA 2 Modules 1, 2 & 3              | CCNA 1 Equipment Skills Exam                         | Module 1 & 3 Packet Tracer Activities, Module 1-3 Discussion First Posts                                                                       | Module 16 & 17 Lab Reports, CCNA 1 Practice Final Exam, CCNA 1 Practice PT Skills Assessment, Cisco Course Feedback Form, CCNA 1 Online Final Exam, CCNA 1 PT Skills Assessment, CCNA 1 Modules 16-17 All Discussion Posts           
-| 31-Oct  | 11                              | Modules 4 & 5                        | Module 1 & 3 Lab Activities, Instructor Meeting      | Module 4 Packet Tracer Activities, Module 1-3 Discussion Response Posts, Module 4 & 5 Discussion First Posts                                   | Module 1 & 3 Packet Tracer Submissions, Module 1-3 Discussion First Posts                                                                                                                                                            
-| 7-Nov   | 12                              | Modules 6, 7 & 8                     | Module 4 & 5 Lab Activities, Instructor Meeting      | Module 6 & 7 Packet Tracer Activities, Module 4 & 5 Discussion Response Posts, Module 6-8 Discussion First Posts                               | Module 1 & 3 Lab Reports, Module 4 & 5 Packet Tracer Online Submissions, Module 1-3 All Discussion Posts, Module 4 & 5 Discussion First Posts, Module 1-4 Exam                                                                       
-| 14-Nov  | 13                              | Modules 9, 10 & 11                   | Module 6, 7, & 8 Lab Activities, Instructor Meeting  | Module 9 & 11 Packet Tracer Activities, Module 6-8 Discussion Response Posts, Module 9-11 Discussion First Posts                               | Module 4 & 5 Lab Reports, Module 6, 7 & 8 Packet Tracer Online Submissions, Module 4 & 5 All Discussion Posts, Module 6-8 Discussion First Posts, Module 5-6 Exam                                                                    
-| 21-Nov  | 14                              | Modules 12 & 13                      | Module 11 Lab Activities, Instructor Meeting         | Module 13 Packet Tracer Activities, Module 9-11 Discussion Response Posts, Module 12 & 13 Discussion First Posts                               | Module 6, 7, & 8 Lab Reports, Module 9 & 11 Packet Tracer Online Submissions, Module 6-8 All Discussion Posts, Module 9-11 Discussion First Posts                                                                                    
-| 28-Nov  | 15                              | Modules 14, 15 & 16                  | Module 13 Lab Activities, Instructor Meeting         | Module 14, 15 & 16 Packet Tracer Activities, Module 12 & 13 Discussion Response Posts, Module 14-16 Discussion First Posts                     | Module 11 Lab Reports, Module 13 Packet Tracer Online Submissions, Module 9-11 Discussion All Posts, Module 12 & 13 Discussion First Posts, Module 7-9 Exam                                                                          
-| 5-Dec   | 16                              |                                      | Module 15 & 16 Lab Activities, Instructor Meeting    | Practice Final Exam, Practice Packet Tracer Skills Assessment, Cisco Course Feedback Form, Online Final Exam, Packet Tracer Skills Assessment  | Module 13 Lab Reports, Module 14, 15 & 16 Packet Tracer Online Submissions, Module 12 & 13 Discussion All Posts, Module 14-16 Discussion First Posts, Module 10-13 Exam                                                              
-| 12-Dec  | FE Week                         |                                      | CCNA 2 Equipment Skills Exam                         |                                                                                                                                                | Module 15 & 16 Lab Reports, CCNA 2 Practice Final Exam, CCNA 2 Practice PT Skills Assessment, Cisco Course Feedback Form, CCNA 2 Online Final Exam, CCNA 2 PT Skills Assessment, Module 14-16 Exam, Module 14-16 All Discussion Posts
-|=================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
-
+|=========================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
+| Date    | Week     | Readings to do before the next date                                                                                                                                                                                  | Work to do before the next date                                                      | Assignments Due (Today by 6:00pm unless otherwise noted)                                                                                                                                                                                                   | Notes                                   
+| 24-Aug  | 1        | Introduction to Virtualization (complete whitepaper), Proxmox VE Fundamentals, Installing Proxmox VE                                                                                                                 | Review Syllabus/Schedule, Check Netlab Access                                        |                                                                                                                                                                                                                                                            |                                         
+| 31-Aug  | 2        | Proxmox VE Cluster and VM Management, Creating Containers                                                                                                                                                            | Proxmox Installation Lab                                                             | Proxmox Installation Discussion First Posts                                                                                                                                                                                                                | No instructor meeting required this week
+| 7-Sep   | 3        | vmWare vSphere Basics (complete whitepaper), vSphere 6.5 Installation and Setup Guide (Pages 82-85, 193-217)                                                                                                         | Proxmox VE Containes & Clusters Lab                                                  | Proxmox Installation Lab Report, Proxmox Installation Discussion All Posts, Proxmox VE Containers & Clusters Discussion First Posts                                                                                                                        |                                         
+| 14-Sep  | 4        | vSphere 6.5 Virtual Machine Administration (p. 8-23), VCSA 6.5 Installation Walkthrough, vSphere 6.5 Installation and Setup Guide (p. 10-18, 232-240), vCenter 6.5 Server and Host Management (p. 23-61)             | VMware ESXi Installation Lab                                                         | Proxmox VE Containers & Clusters Lab Report, Proxmox VE Containers & Clusters Discussion All Posts, VMware ESXi Installation Discussion First Posts, Proxmox Exam                                                                                          |                                         
+| 21-Sep  | 5        | vSphere 6.5 Command Line Concepts and Examples (p. 11-31), vmWare KB1038043, vCenter 6.5 Server and Host Management (p. 113-124), vSphere 6.5 Virtual Machine Administration (p. 24-50) (Notes: Add AD Integration)  | VMware vCenter Installation Lab                                                      | VMware ESXi Install Lab Report, VMware ESXi Installation Discussion All Posts, VMware vCenter Installation First Posts, VMware ESXi Exam                                                                                                                   |                                         
+| 28-Sep  | 6        | Read/Watch: Introduction to VoIP with Asterisk Materials (see below)                                                                                                                                                 | VMware vSphere Administration Lab                                                    | VMware vCenter Install Lab Report, VMware vCenter Installation Discussion All Posts, VMware vSphere Administration Discussion First Posts, VMware vCenter Exam                                                                                             |                                         
+| 5-Oct   | 7        | Read: VoIP: Provisioning, Voicemail, and SIP (see below)                                                                                                                                                             | Introduction to VoIP Labs (see Assignments page)                                     | VMware vSphere Administration Lab Report, VMware vSphere Administration Discussion All Posts, Introduction to VoIP First Posts, VMware vSphere Administration Exam                                                                                         |                                         
+| 12-Oct  | 8        | Read: T1 and PSTN Access Materials (see below)                                                                                                                                                                       | Provisioning, Voicemail, and SIP Labs (see Assignments page)                         | Introduction to VoIP Lab, Introduction to VoIP All Posts, VoIP: Provisioning, Voicemail, and SIP First Posts, Introduction to VoIP Exam                                                                                                                    |                                         
+| 19-Oct  | 9        | Read: GUI Asterisk Configuration Materials (see below)                                                                                                                                                               | T1 and PSTN Access Labs (see Assignments page)                                       | VoIP: Provisioning, Voicemail, and SIP Lab Report, VoIP: Provisioning, Voicemail, and SIP Discussion All Posts, T1 and PSTN Access Discussion First Posts, VoIP: Provisioning, Voicemail, and SIP Lab Exam                                                 |                                         
+| 26-Oct  | 10       | Getting Started with DevNet Readings (see below for links)                                                                                                                                                           | GUI Asterisk Configuration Labs (see Assignments page)                               | T1 and PSTN Access Lab Report, T1 and PSTN Access Discussion All Posts, GUI Asterisk Configuration Discussion First Posts, T1 and PSTN Access Exam                                                                                                         |                                         
+| 2-Nov   | 11       | REST APIs and Introducing Network Programmability Readings (see below for links)                                                                                                                                     | Getting Started with DevNet Lab (see Assignments page)                               | GUI Asterisk Configuration Lab Report, GUI Asterisk Configuration Discussion All Posts, Getting Started with DevNet Discussion First Posts, GUI Asterisk Configuration Exam                                                                                |                                         
+| 9-Nov   | 12       | Model Driven Network Programmability and IOS XE Readings (see below for links)                                                                                                                                       | REST API Fundamentals & Network Programmability Lab (see Assignments page)           | Getting Started with DevNet Lab Report, Getting Started with DevNet Discussion All Posts, REST API Fundamentals & Network Programmability Discussion First Posts, Getting Started with DevNet Exam                                                         |                                         
+| 16-Nov  | 13       | Getting Started with Ansible for Network Programmability Readings (see below for links)                                                                                                                              | Model Driven Network Programmability and IOS XE Lab (see Assignments page)           | REST APIs and Introducing Network Programmability Lab Report, REST APIs and Introducing Network Programmability All Posts, Model Driven Network Programmability and IOS XE Discussion First Posts, REST APIs and Introducing Network Programmability Exam  |                                         
+| 23-Nov  | 14       | Readings as required for your case study projects                                                                                                                                                                    | Getting Started with Ansible for Network Programmability Lab (see Assignments page)  | Model Driven Network Programmability and IOS XE Lab Report,Model Driven Network Programmability and IOS XE Readings All Posts, Getting Started with Ansible for Network Programmability First Posts, Model Driven Network Programmability and IOS XE Exam  |                                         
+| 30-Nov  | 15       | Readings as required for your case study projects                                                                                                                                                                    | Start work on your case study project                                                | Getting Started with Ansible for Network Programmability Lab Report, Getting Started with Ansible for Network Programmability All Posts, Getting Started with Ansible for Network Programmability Exam                                                     |                                         
+| 7-Dec   | 16       | Readings as required for your case study projects                                                                                                                                                                    | Finish work on your case study project and practice presentation                     |                                                                                                                                                                                                                                                            |                                         
+| 14-Dec  | FE Week  |                                                                                                                                                                                                                      |                                                                                      | Case Study Presentations, Case Study Lab Reports, Online Final Exam                                                                                                                                                                                      
+|=============================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
