--- a/franske-course-information/modules/itc-2300/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2300/pages/assignments.adoc
@@ -20,7 +20,7 @@ Find instructions for the xref:lab-vmware-esxiinstallation.adoc[vmWare ESXi Inst
 Find instructions for the xref:lab-vmware-vcenterinstallation.adoc[vmWare vSphere vCenter Server Installation Lab here].
 
 ==== vmWare vSphere Administration Lab
-Find instructions for the xref:lab-vmware-vsphereadmin.adoc[vmWare vSphere Administration Lab here]].
+Find instructions for the xref:lab-vmware-vsphereadmin.adoc[vmWare vSphere Administration Lab here].
 
 === Voice over IP (VoIP) Labs
 
